<!--
    *    Win Blackjack
    *    Copyright (C) 2015  John Serrano
    *
    *    This program is free software: you can redistribute it and/or modify
    *    it under the terms of the GNU General Public License as published by
    *    the Free Software Foundation, either version 3 of the License, or
    *    (at your option) any later version.
    *
    *    This program is distributed in the hope that it will be useful,
    *    but WITHOUT ANY WARRANTY; without even the implied warranty of
    *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    *    GNU General Public License for more details.
    *
    *    You should have received a copy of the GNU General Public License
    *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->


<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00bbff"
    tools:context=".MainMenu">
    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
        android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#ff00e6ff"
        android:textStyle="bold" android:textSize="50sp" android:gravity="top"
        android:text="@string/dummy_content" />

        <LinearLayout
            android:fitsSystemWindows="true"
            android:id="@+id/frame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/Play_button"
                android:id="@+id/playbutton"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="openPlayActivity"
                />

            <Button
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/Table_button"
                android:id="@+id/tablebutton"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="openTableActivity"
                />

            <Button
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:text="@string/Settings_button"
                android:id="@+id/settingsbutton"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:onClick="openSettingsActivity"
                android:visibility="gone"
                />

        </LinearLayout>
    <RelativeLayout
        android:layout_gravity="bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Win Blackjack is free software under the GPL"/>
    </RelativeLayout>
</FrameLayout>
